# snap

./: .env.example  .gitignore  CLAUDE.md  README.md  SNAP Literature Review.xlsx  pyproject.toml
config/: experiment.yaml  models.yaml  thresholds.yaml
config/items/: moral.yaml  personality.yaml
config/prompts/: system_prompts.yaml
config/prompts/templates/: moral_item.jinja2  personality_item.jinja2
scripts/: analyze_results.py  generate_report.py  run_experiment.py
src/: __init__.py
src/analysis/: __init__.py  clustering.py  descriptive.py  hypothesis.py  reliability.py
src/api/: __init__.py  cache.py  openrouter.py  rate_limiter.py
src/core/: __init__.py  condition.py  exceptions.py  experiment.py  matrix.py
src/parsing/: __init__.py  refusal_detector.py  response_parser.py  validators.py
src/reporting/: __init__.py  html_report.py  profile_card.py  verdict.py
src/scoring/: __init__.py  likert.py  normalizer.py
tests/: __init__.py
tests/fixtures/: sample_responses.json
tests/integration/: test_pipeline.py
tests/unit/: test_parser.py  test_reliability.py  test_scoring.py
